pkg/crdtest/testdata/valid/cidr-valid.yaml
apiVersion: policy.networking.k8s.io/v1alpha2
kind: ClusterNetworkPolicy
metadata:
  name: cidr-valid
spec:
  tier: Admin
  priority: 10
  subject:
    namespaces:
      matchLabels:
        kubernetes.io/metadata.name: sensitive-ns
  egress:
    - action: Accept
      to:
        - networks:
            - "10.0.0.0/24"
            - "2001:db8::/32"
