pkg/crdtest/testdata/valid/port-range-valid.yaml
apiVersion: policy.networking.k8s.io/v1alpha2
kind: ClusterNetworkPolicy
metadata:
  name: port-range-valid
spec:
  tier: Admin
  priority: 10
  subject:
    namespaces:
      matchLabels:
        kubernetes.io/metadata.name: sensitive-ns
  egress:
    - action: Accept
      to:
        - namespaces:
            matchLabels:
              kubernetes.io/metadata.name: other-ns
      protocols:
        - tcp:
            destinationPort:
              range:
                start: 80
                end: 90
