pkg/crdtest/testdata/valid/port1.yaml
apiVersion: policy.networking.k8s.io/v1alpha2
kind: ClusterNetworkPolicy
metadata:
  name: port1
spec:
  tier: Admin
  priority: 0
  subject:
    namespaces:
      matchLabels:
        kubernetes.io/metadata.name: sensitive-ns
  ingress:
    - action: Deny
      name: select-all-deny-all
      from:
      - pods:
          namespaceSelector:
            matchLabels: {}
          podSelector:
            matchLabels: {}
      protocols:
        tcp:
          - destinationPort:
              number: 8080
              # flags: [syn] # future extension example
          - destinationPort:
              range:
                start: 8080
                end: 9090
        udp:
          - destinationPort:
              number: 8080
          - destinationPort:
              number: 9090
        destinationNamedPort:
          - name: http
          - name: monitoring
